--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@juno/toolbox": "git+ssh://git.junolab.net/fl/toolbox.git",
     "@juno/types": "git+ssh://git.junolab.net/fl/types.git",
     "@juno/ui-private": "git+ssh://git.junolab.net/fl/ui-private.git",
+    "core-js": "^3.4.2",
+    "immer": "^5.0.0",
     "mapbox-gl": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-mapbox-gl": "^4.7.3"
+    "react-mapbox-gl": "^4.7.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@avg206/frontend-config": "github:avg206/frontend-config",
     "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0"
+    "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^3.4.6"
   },
   "scripts": {
     "build": "juno-scripts build",
@@ -33,7 +37,7 @@
     ]
   },
   "eslintConfig": {
-    "extends": "./node_modules/@avg206/frontend-config/eslint/javascript.js"
+    "extends": "./node_modules/@avg206/frontend-config/eslint/typescript.js"
   },
   "eslintIgnore": [
     "node_modules",
